<resources>
    <string name="app_name">Soğumadan Ye</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="foods">Foods</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="food_image">Food Image</string>
    <string name="cost">Cost:</string>
    <string name="cost_tl">%1d ₺</string>
    <string name="total_cost_tl">Total: %1d ₺</string>
    <string name="price">Price:</string>
    <string name="count">Count:</string>
    <string name="or">or</string>
    <string name="anonymous">You can login anonymously if you want.</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registerPage">Register Page</string>
    <string name="name">Name</string>
    <string name="order">Order</string>
    <string name="date">Date:</string>
    <string name="favourite">Favourite</string>
    <string name="prepare">Your order is preparing.</string>
    <string name="delivered">Your order has been delivered.</string>
    <string name="on_way">Your order is on its way.</string>
    <string name="canceled">Your order has been canceled.</string>
    <string name="logout">Logout</string>
    <string name="register_cc">Register</string>
    <string name="settings">Settings</string>
    <string name="you_must_login_if_you_want_to_order">You must login If you want to order.</string>
    <string name="hello">Hello</string>
    <string name="anonymousInfo">If you want to fully use this application, you must create an account..</string>
    <string name="orders">Orders</string>
    <string name="pick_theme">Pick Theme</string>
</resources>