<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/foods"
        android:id="@+id/foodListFragment"
        android:icon="@drawable/ic_baseline_fastfood_24" />

    <item android:title="@string/cart"
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_baseline_shopping_cart_24" />

    <item android:title="@string/favourite"
        android:id="@+id/favouriteFragment"
        android:icon="@drawable/ic_baseline_favorite_border_24" />

    <item android:title="@string/orders"
        android:id="@+id/orderFragment"
        android:icon="@drawable/ic_baseline_shopping_bag_24" />

    <item android:title="@string/profile"
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_person_24" />
</menu>